CSS Training Part 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Development Training</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -14,13 +15,17 @@
     <h4>Erick</h4>
     <h5>Erick</h5>
     <h6>Erick</h1>
-        <p style="border: 2px solid #000;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
             commodi voluptatum debitis
             necessitatibus, esse placeat maxime nam amet consequatur facilis doloremque beatae repudiandae repellendus,
             expedita laborum? Temporibus, sapiente deleniti!
         </p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi facilis nam dicta, distinctio asperiores
+            magnam laborum atque ab perspiciatis corporis quia iste omnis commodi error delectus est quis excepturi!
+        </p>
         <span>Date:</span><span style="color: red;"> 3 July 2024</span>
-        <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa veritatis, incidunt cum tempore
+        <div class="maxim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa veritatis, incidunt cum tempore
             consequuntur esse possimus, quos sapiente neque nam explicabo quae, hic dicta. Dolorem illum esse ut atque?
         </div>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iusto quod alias beatae est accusantium
@@ -29,7 +34,11 @@
         </span>
         <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eum, at quidem architecto modi consequatur
             consectetur deserunt voluptatem mollitia, atque distinctio soluta maxime dignissimos accusantium hic et
-            illum voluptatibus nemo?</span>
+            illum voluptatibus nemo?
+        </span>
+        <p>
+        <div></div>
+        </p>
         <br>
         <table>
             <th> First Name:</th>
@@ -78,6 +87,29 @@
             <li>Bananas</li>
             <li>Avocado</li>
         </ol>
+        <p class="erick">Pagraph 1</p>
+        <p class="enoc">Pagraph 2</p>
+        <p class="erick">Pagraph 3</p>
+        <p class="enoc">Pagraph 4</p>
+        <p class="erick" id="btn">Pagraph 5</p>
+        <a href="home.html">Home</a>
+        <div>
+            <div>
+                <div>Table</div>
+                <div>Car</div>
+                <div>10000</div>
+            </div>
+            <div class="desp">
+                <p class="maxim">Maxim</p>
+                <p class="maxim">Erick</p>
+                <p class="maxim">Enoc</p>
+            </div>
+            <div>
+                <div>Laptop</div>
+                <div>Laptop</div>
+                <div>Laptop</div>
+            </div>
+        </div>
 </body>
 
 </html>
