--- a/index.html
+++ b/index.html
@@ -6,26 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Development Training</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        p {
+            background-color: red;
+        }
+
+        .paragraph {
+            background-color: blueviolet;
+        }
+
+        .div{
+            background-color: rgb(191, 235, 34) ;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Erick</h1>
+    <p>Maxim</p>
     <h2>Erick</h2>
     <h3>Erick</h3>
     <h4>Erick</h4>
     <h5>Erick</h5>
     <h6>Erick</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
+        <p style="background-color: green; color: red;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
             commodi voluptatum debitis
             necessitatibus, esse placeat maxime nam amet consequatur facilis doloremque beatae repudiandae repellendus,
             expedita laborum? Temporibus, sapiente deleniti!
         </p>
+        <div class="div">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum, dolores magnam odit eos cum
+            facere? Maiores illum nihil, doloribus repellat eligendi unde quisquam nam dolorem quo, excepturi ipsa
+            dignissimos!
+        </div>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi facilis nam dicta, distinctio asperiores
+        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi facilis nam dicta,
+            distinctio asperiores
             magnam laborum atque ab perspiciatis corporis quia iste omnis commodi error delectus est quis excepturi!
         </p>
         <span>Date:</span><span style="color: red;"> 3 July 2024</span>
-        <div class="maxim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa veritatis, incidunt cum tempore
+        <div class="maxim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa veritatis, incidunt cum
+            tempore
             consequuntur esse possimus, quos sapiente neque nam explicabo quae, hic dicta. Dolorem illum esse ut atque?
         </div>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iusto quod alias beatae est accusantium
