--- a/index.html
+++ b/index.html
@@ -1,125 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Development Training</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Erick</h1>
     <p>Maxim</p>
     <h2>Erick</h2>
     <h3>Erick</h3>
     <h4>Erick</h4>
     <h5>Erick</h5>
-    <h6>Erick</h1>
-        <div style="background-color: red; color: blue; padding: 20px;">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
-            commodi voluptatum debitis
-            necessitatibus, esse placeat maxime nam amet consequatur facilis doloremque beatae repudiandae repellendus,
-            expedita laborum? Temporibus, sapiente deleniti!
-        </div>
-        <br>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum, dolores magnam odit eos cum
-            facere? Maiores illum nihil, doloribus repellat eligendi unde quisquam nam dolorem quo, excepturi ipsa
-            dignissimos!
-        </div>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi facilis nam dicta,
-            distinctio asperiores
-            magnam laborum atque ab perspiciatis corporis quia iste omnis commodi error delectus est quis excepturi!
-        </p>
-        <span>Date:</span><span> 3 July 2024</span>
-        <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa veritatis, incidunt cum
-            tempore
-            consequuntur esse possimus, quos sapiente neque nam explicabo quae, hic dicta. Dolorem illum esse ut atque?
-        </div>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iusto quod alias beatae est accusantium
-            enim iure explicabo quasi inventore, incidunt velit numquam facere atque ab vero nam eaque
-            reiciendis.
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eum, at quidem architecto modi consequatur
-            consectetur deserunt voluptatem mollitia, atque distinctio soluta maxime dignissimos accusantium hic et
-            illum voluptatibus nemo?
-        </span>
-        <p>
-        <div></div>
-        </p>
-        <br>
-        <table>
-            <th> First Name:</th>
-            <th>Second Name:</th>
-            <th>Age:</th>
-            <tr>
-                <td>Erick</td>
-                <td>John</td>
-                <td>20</td>
-            </tr>
-            <tr>
-                <td>Enock</td>
-                <td>Justice</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <td>Maxim</td>
-                <td>Jenner</td>
-                <td>50</td>
-            </tr>
-        </table>
-        <a href="https://google.com">Google</a>
-        <form action="">
-            <label>First Name: </label>
-            <input type="text">
-            <label>Second Name: </label>
-            <input type="text">
-            <label>Age: </label>
-            <input type="number">
-            <label>Email Address: </label>
-            <input type="email">
-            <label for="">Password</label>
-            <input type="password">
-            <input type="file" name="" id="">
-            <input type="submit" value="Send">
-            <input type="search">
-        </form>
-        <img src="image.jpg" alt="Madam" srcset="">
-        <ul>
-            <li>Mangos</li>
-            <li>Bananas</li>
-            <li>Avocado</li>
-        </ul>
-        <ol>
-            <li>Mangos</li>
-            <li>Bananas</li>
-            <li>Avocado</li>
-        </ol>
-        <p class="erick">Pagraph 1</p>
-        <p class="enoc">Pagraph 2</p>
-        <p class="erick">Pagraph 3</p>
-        <p class="enoc">Pagraph 4</p>
-        <p class="erick" id="btn">Pagraph 5</p>
-        <a href="home.html">Home</a>
-        <div>
-            <div>
-                <div>Table</div>
-                <div>Car</div>
-                <div>10000</div>
-            </div>
-            <div class="desp">
-                <p class="maxim">Maxim</p>
-                <p class="maxim">Erick</p>
-                <p class="maxim">Enoc</p>
-            </div>
-            <div>
-                <div>Laptop</div>
-                <div>Laptop</div>
-                <div>Laptop</div>
-            </div>
-            <button></button>
-        </div>
-</body>
+    <h6>Erick</h6>
+    <div style="background-color: red; color: blue; padding: 20px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
+      commodi voluptatum debitis necessitatibus, esse placeat maxime nam amet
+      consequatur facilis doloremque beatae repudiandae repellendus, expedita
+      laborum? Temporibus, sapiente deleniti!
+    </div>
+    <br />
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum,
+      dolores magnam odit eos cum facere? Maiores illum nihil, doloribus
+      repellat eligendi unde quisquam nam dolorem quo, excepturi ipsa
+      dignissimos!
+    </div>
+    <br />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi
+      facilis nam dicta, distinctio asperiores magnam laborum atque ab
+      perspiciatis corporis quia iste omnis commodi error delectus est quis
+      excepturi!
+    </p>
+    <span>Date:</span><span> 3 July 2024</span>
+    <div>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsa
+      veritatis, incidunt cum tempore consequuntur esse possimus, quos sapiente
+      neque nam explicabo quae, hic dicta. Dolorem illum esse ut atque?
+    </div>
+    <span
+      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iusto
+      quod alias beatae est accusantium enim iure explicabo quasi inventore,
+      incidunt velit numquam facere atque ab vero nam eaque reiciendis.
+    </span>
+    <span
+      >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eum, at
+      quidem architecto modi consequatur consectetur deserunt voluptatem
+      mollitia, atque distinctio soluta maxime dignissimos accusantium hic et
+      illum voluptatibus nemo?
+    </span>
 
+    <br />
+    <table>
+      <th>First Name:</th>
+      <th>Second Name:</th>
+      <th>Age:</th>
+      <tr>
+        <td>Erick</td>
+        <td>John</td>
+        <td>20</td>
+      </tr>
+      <tr>
+        <td>Enock</td>
+        <td>Justice</td>
+        <td>25</td>
+      </tr>
+      <tr>
+        <td>Maxim</td>
+        <td>Jenner</td>
+        <td>50</td>
+      </tr>
+    </table>
+    <a href="https://google.com">Google</a>
+    <form action="">
+      <label>First Name: </label>
+      <input type="text" />
+      <label>Second Name: </label>
+      <input type="text" />
+      <label>Age: </label>
+      <input type="number" />
+      <label>Email Address: </label>
+      <input type="email" />
+      <label for="">Password</label>
+      <input type="password" />
+      <input type="file" name="" id="" />
+      <input type="submit" value="Send" />
+      <input type="search" />
+    </form>
+    <img src="image.jpg" alt="Madam" srcset="" />
+    <ul>
+      <li>Mangos</li>
+      <li>Bananas</li>
+      <li>Avocado</li>
+    </ul>
+    <ol>
+      <li>Mangos</li>
+      <li>Bananas</li>
+      <li>Avocado</li>
+    </ol>
+    <p class="erick">Pagraph 1</p>
+    <p class="enoc">Pagraph 2</p>
+    <p class="erick">Pagraph 3</p>
+    <p class="enoc">Pagraph 4</p>
+    <p class="erick" id="btn">Pagraph 5</p>
+    <a href="home.html">Home</a>
+    <div>
+      <div>
+        <div>Table</div>
+        <div>Car</div>
+        <div>10000</div>
+      </div>
+      <div class="desp">
+        <p class="maxim">Maxim</p>
+        <p class="maxim">Erick</p>
+        <p class="maxim">Enoc</p>
+      </div>
+      <div>
+        <div>Laptop</div>
+        <div>Laptop</div>
+        <div>Laptop</div>
+      </div>
+      <button></button>
+    </div>
+  </body>
 </html>
