Internal CSS and External CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Development Training</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -14,20 +15,26 @@
     <h4>Erick</h4>
     <h5>Erick</h5>
     <h6>Erick</h6>
-    <div style="background-color: red; color: blue; padding: 20px">
+    <div class="enock">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
       commodi voluptatum debitis necessitatibus, esse placeat maxime nam amet
       consequatur facilis doloremque beatae repudiandae repellendus, expedita
       laborum? Temporibus, sapiente deleniti!
     </div>
     <br />
-    <div>
+    <div class="enock">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum,
       dolores magnam odit eos cum facere? Maiores illum nihil, doloribus
       repellat eligendi unde quisquam nam dolorem quo, excepturi ipsa
       dignissimos!
     </div>
     <br />
+    <div class="enock">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
+      commodi voluptatum debitis necessitatibus, esse placeat maxime nam amet
+      consequatur facilis doloremque beatae repudiandae repellendus, expedita
+      laborum? Temporibus, sapiente deleniti!
+    </div>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa animi
       facilis nam dicta, distinctio asperiores magnam laborum atque ab
