CSS: display flex and justify-content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Development Training</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -130,6 +130,19 @@
         <div>Laptop</div>
       </div>
       <button></button>
+    </div>
+    <hr />
+    <br />
+    <br />
+    <br />
+    <div class="parent">
+      <div class="secondparent">
+        <div>Second Child</div>
+        <div>Third Child</div>
+        <div>Forth Child</div>
+        <div>Fith Child</div>
+      </div>
+      <div>First Child</div>
     </div>
   </body>
 </html>
