Display flex, Justify content

--- a/index.html
+++ b/index.html
@@ -144,5 +144,61 @@
       </div>
       <div>First Child</div>
     </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <div class="divparent">
+      <div class="parent2">
+        <div>First</div>
+        <div>second</div>
+        <div>Third</div>
+      </div>
+      <div class="parent2">
+        <div>Forth</div>
+        <div>Fifth</div>
+        <div>Sixth</div>
+      </div>
+      <div class="parent2">
+        <div>Seventh</div>
+        <div>Eighth</div>
+        <div>Nineth</div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <div class="parent3">
+      <div class="parent4">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three</div>
+        <div>Four</div>
+      </div>
+      <div>Five</div>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <div class="parent5">
+      <div>
+        <div class="child">One</div>
+        <div class="child">Two</div>
+      </div>
+      <div class="bigchild">Three</div>
+      <div>
+        <div class="child">Four</div>
+        <div class="child">Five</div>
+      </div>
+      <div>
+        <div class="child">Six</div>
+        <div class="child">Seven</div>
+      </div>
+    </div>
   </body>
 </html>
