Add the div with a class name values

--- a/careers.html
+++ b/careers.html
@@ -29,6 +29,35 @@
           anim irure fugiat mi
         </p>
         <a href="">View open positions</a>
+        <div class="values">
+          <h1>Our values</h1>
+          <div class="cards">
+            <div class="card">
+              <img src="image.jpg" alt="" />
+              <h3>Build community</h3>
+              <p>
+                Sunt sit proident commodo excepteur proident non cupidatat
+                cillum eu minim
+              </p>
+            </div>
+            <div class="card">
+              <img src="image.jpg" alt="" />
+              <h3>Love your craft</h3>
+              <p>
+                Sunt sit proident commodo excepteur proident non cupidatat
+                cillum eu minim
+              </p>
+            </div>
+            <div class="card">
+              <img src="image.jpg" alt="" />
+              <h3>Grow as you go</h3>
+              <p>
+                Sunt sit proident commodo excepteur proident non cupidatat
+                cillum eu minim
+              </p>
+            </div>
+          </div>
+        </div>
       </center>
     </div>
   </body>
