--- a/careers.html
+++ b/careers.html
@@ -30,7 +30,7 @@
         </p>
         <a href="">View open positions</a>
         <div class="values">
-          <h1>Our values</h1>
+          <h1>Our Values</h1>
           <div class="cards">
             <div class="card">
               <img src="image.jpg" alt="" />
